<resources>
    <string name="app_name">Bonyad</string>
    <string name="no_network">No internet</string>
    <string name="user_deleted">User Has been Deleted By The System or bloked</string>
    <string name="camera">Camera</string>
    <string name="plz_camera_gallery">Please Choose Camera Or Gallery</string>
    <string name="plz_img">Please Select Image</string>
    <string name="images">Images</string>
    <string name="cancel">Cancel</string>
    <string name="please_activate_permission">Please Activate Permission</string>
    <string name="field_required">required</string>
    <string name="failed_to_connect_to_server_please_repeat_your_requesr">failed to connect to server please repeat your request</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="lang">en</string>
    <string name="open1">open gps</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="copied">copied</string>
    <string name="eng">AR</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="customer_account">User account</string>
    <string name="merchant_account">Merchant Account</string>
    <string name="expert_account">Service provider account</string>
    <string name="language_change">Language change</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="mobile_number">mobile number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_to_the_terms_and_conditions">Agree to the Terms and Conditions</string>
    <string name="enter_the_information_below">Enter the information below</string>
    <string name="activation_code">Activation code</string>
    <string name="enter_the_verification_code_sent_to_you_via_mobile_number">Enter the verification code sent to you via mobile number</string>
    <string name="the_code_has_not_been_received">The code has not been received?</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_the_mobile_number_to_send_the_activation_code">Enter the mobile number to send the activation code</string>
    <string name="send">Send</string>
    <string name="reset_a_new_password">Reset a new password</string>
    <string name="enter_the_new_password">Enter the new password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="my_appointments">Appointments</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_data">My data</string>
    <string name="wallet">Wallet</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="about_the_platform">About the platform</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy">Privacy</string>
    <string name="edit_profile_data">Edit profile data</string>
    <string name="change_mobile_number">Change mobile number</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="enter_the_new_mobile_number">Enter the new mobile number</string>
    <string name="content_of_the_message">content of the message</string>
    <string name="or_contact_us_through_our_platforms">Or contact us through our platforms.</string>
    <string name="agree_to">Agree to</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="years_of_experience">Years of experience</string>
    <string name="images_of_certificates_and_licenses">Images of certificates and licenses</string>
    <string name="please_upload_an_image">Please upload an image.</string>
    <string name="services">Services</string>
    <string name="appointment_management">Appointment Management</string>
    <string name="required">required</string>
    <string name="length_must_be">lenght must be</string>
    <string name="confirm_password_must_same_password">confirm password must same password</string>
    <string name="i_agree_to">must agree to</string>
    <string name="email_foramt_is_wrong">Email formate is wrong</string>
    <string name="select">select</string>
    <string name="attach_a_picture">Attach a picture</string>
    <string name="services1">Services</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="add_a_service">Add a service</string>
    <string name="service_name">Service name</string>
    <string name="service_description">Service description</string>
    <string name="service_images">Service Images</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="edit_service">Edit service</string>
    <string name="departments">Departments</string>
    <string name="specialists">Specialists</string>
    <string name="more">More</string>
    <string name="products">Products</string>
    <string name="description1">Description</string>
    <string name="date_and_time_of_receipt">Booking date and time</string>
    <string name="time">Time</string>
    <string name="reservation_request">Reservation request</string>
    <string name="reservation_request_has_been_sent_successfully">Reservation request has been sent successfully.</string>
    <string name="please_follow_up_on_the_status_of_the_order_once_it_is_accepted">Please follow up on the status of the order once it is accepted.</string>
    <string name="filter">Filter</string>
    <string name="city">City</string>
    <string name="specialty">Specialty</string>
    <string name="clear">Clear</string>
    <string name="main_sections">Main Sections</string>
    <string name="you_can_add_and_edit_your_appointments">You can add and edit your appointments.</string>
    <string name="work_days">Work days</string>
    <string name="available_appointments">Available appointments</string>
    <string name="add_a_new_appointment">Add a new appointment</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="added_before">Make sure you did not add it before or the time is not suitable.</string>
    <string name="there_is_time_not_added_in_day">there is time not added in day</string>
    <string name="my_services">My services</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="packages">Packages</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="price">Price</string>
    <string name="r_s">R.S</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_date">Subscription date</string>
    <string name="payment_failer">payment failed</string>
    <string name="load_more">Load More</string>
    <string name="show_less">Show Less</string>
    <string name="there_are_no_services_available">there are no services available</string>
    <string name="are_you_sure_to_log_out_of_the_app">Are you sure to log out of the app?</string>
    <string name="delete_the_service">Delete the service</string>
    <string name="are_you_sure_you_want_to_delete_the_service">Are you sure you want to delete the service?</string>
    <string name="welcome">Welcome</string>
    <string name="addresses">Addresses</string>
    <string name="bank_account">Bank account</string>
    <string name="default_address">default address</string>
    <string name="add_a_new_address">Add a new address</string>
    <string name="there_are_no_addresses_available">there are no addresses available</string>
    <string name="street">Street</string>
    <string name="street_name">Street name</string>
    <string name="address_details">Address details</string>
    <string name="enter_the_address">Enter the address</string>
    <string name="select_as_default_address">Set as default address</string>
    <string name="add_address">add address</string>
    <string name="confirm">Confirm</string>
    <string name="show_on_map">Show on map</string>
    <string name="done">Done</string>
    <string name="there_are_no_technicals_available">there are no technicals available</string>
    <string name="all_construction_needs_are_in_your_hands">All construction needs... are in your hands!</string>
    <string name="browse_thousands_of_products_from_cement_and_tools_to_paints_and_decor_and_choose_what_suits_your_project_with_the_click_of_a_button">Browse thousands of products, from cement and tools to paints and decor, and choose what suits your project with the click of a button!</string>
    <string name="your_smart_solution_for_construction_and_maintenance">Your smart solution for construction and maintenance</string>
    <string name="ready_to_adopt_we_will_provide_you_with_everything_you_need">Ready to adopt? We will provide you with everything you need.</string>
    <string name="reliable_labor">Reliable labor</string>
    <string name="check_the_reviews_and_choose_the_worker_that_suits_you">Check the reviews and choose the worker that suits you.</string>
    <string name="your_work_is_ready_and_waiting_for_you">Your work is ready... and waiting for you.</string>
    <string name="nearby_requests_direct_money_and_you_control_your_time">Nearby requests, direct money, and you control your time.</string>
    <string name="today_s_task_from_the_application">Today\'s task... from the application</string>
    <string name="with_you_every_step_of_the_way_in_your_career_journey">With you every step of the way in your career journey.</string>
    <string name="skip">Skip</string>
    <string name="current_appointments">Current appointments</string>
    <string name="completed_appointments">Completed appointments</string>
    <string name="rejected_appointments">Rejected appointments</string>
    <string name="booking_date_and_time">Booking date and time:</string>
    <string name="details1">Details</string>
    <string name="refused">Refused</string>
    <string name="modify_the_request">Modify the request</string>
    <string name="reason_for_rejection">Reason for rejection</string>
    <string name="rate_your_reservation">Rate your reservation</string>
    <string name="write_your_comment">Write a comment</string>
    <string name="must_male_rate">must make rate</string>
    <string name="date_and_time">Date and time</string>
    <string name="location">Location</string>
    <string name="evaluation">Evaluation</string>
    <string name="back">Back</string>
    <string name="wallet_charge">Wallet charge</string>
    <string name="enter_the_required_shipping_amount">Enter the required shipping amount</string>
    <string name="shipping_cost">Shipping cost</string>
    <string name="riyal">Riyal</string>
    <string name="charge">Charge</string>
</resources>