<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Activity.SelecttypeActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="28dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng"
                    android:textStyle="bold"
                    android:fontFamily="@font/cairobold"
                    android:textSize="14sp"
                    android:textColor= "@color/darkwhite"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_language"/>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bonyad_logo_12_1"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/select_account_type"
                android:fontFamily="@font/cairobold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:cardBackgroundColor="#0080E0"
                app:cardCornerRadius="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="42dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/customer_account"
                    android:fontFamily="@font/cairobold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:cardBackgroundColor="#0080E0"
                app:cardCornerRadius="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/merchant_account"
                    android:fontFamily="@font/cairobold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:cardBackgroundColor="#0080E0"
                app:cardCornerRadius="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/expert_account"
                    android:fontFamily="@font/cairobold"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>