<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragment.WalletchargeFragment">
    <data class="ChargewalletviewModelBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="fudex.bonyad.viewmodel.ChargewalletViewModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:onClick="@{ () -> model.cancel() }"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/ic_close"/>
            <ImageView
                android:id="@+id/img"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@drawable/money_recive"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_charge"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/darkblue"
                android:fontFamily="@font/cairosemibold"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="25dp"
                android:textSize="16sp"
                android:textColor="@color/darkblue"
                android:text="@string/enter_the_required_shipping_amount"
                android:fontFamily="@font/cairoregular"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rec_strockblue"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/money"
                    android:onTextChanged="@{model.onmoneyChanged()}"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:hint="@string/shipping_cost"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/darkblue"
                    android:fontFamily="@font/cairosemibold"
                    android:backgroundTint="@android:color/transparent"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/cairosemibold"
                    android:text="@string/riyal"
                    android:textColor="@color/darkblue"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="40dp">
                <androidx.cardview.widget.CardView
                    android:onClick="@{ () -> model.validateInput() }"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/lightblue"
                    app:cardCornerRadius="16dp">
                    <TextView
                        android:id="@+id/canceltxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/charge"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:fontFamily="@font/cairobold"
                        android:textSize="16sp"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>