<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Activity.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bonyad_logo_08_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/lightblue"
                    android:text="@string/welcome_back"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="56dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairobold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:text="@string/log_in_to_your_account"
                    android:textColor="@color/darkblue"
                    android:textSize="14sp"
                    android:fontFamily="@font/cairoregular"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="24dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/rec_strockblue"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_quill_phone"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/darkblue"
                            android:fontFamily="@font/cairosemibold"
                            android:backgroundTint="@android:color/transparent"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairoregular"
                        android:text="@string/mobile_number"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:background="@color/white"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/darkblue"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/rec_strockblue"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_lock"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginStart="10dp"
                            android:textColor="@color/darkblue"
                            android:fontFamily="@font/cairosemibold"
                            android:backgroundTint="@android:color/transparent"
                            android:layout_marginEnd="10dp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_mdi_eye_off_outline"
                            android:layout_gravity="center"
                            android:layout_marginEnd="15dp"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairoregular"
                        android:text="@string/password"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:background="@color/white"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/darkblue"/>
                </FrameLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    bind:underline = "@string/forgot_your_password"
                    android:fontFamily="@font/cairoregular"
                    android:textColor="@color/lightblue"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="150dp"
                    app:cardBackgroundColor="@color/lightblue"
                    app:cardCornerRadius="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/cairobold"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="24dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightblue"
                        android:fontFamily="@font/cairoregular"
                        android:text="@string/don_t_have_an_account"
                        android:textSize="14sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lightblue"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold"
                        android:fontFamily="@font/cairobold"
                        android:text="@string/create_an_account"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/lightblue"
            android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>